--- a/4/index.html
+++ b/4/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <section>
-        <div class="container pad" style="color: white; background-color: crimson;">
+        <div class="container pad" style="color: white; background-color: black;">
             <div class="box1" style="flex: 45%; line-height: 20px;">
                 <p><i>Monday, 10:00 Am - Friday, 10:00 Am</i></p>
                 <h2>Welcome to our Church</h2>
