--- a/4/index.html
+++ b/4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e222ac4eae.js" crossorigin="anonymous"></script>
     <title>Document1</title>
     <style>
         * {
@@ -120,6 +120,9 @@
             height: 2in;
             width: 100%;
         }
+        span{
+            padding-right: 5px;
+        }
     </style>
 </head>
 
@@ -128,7 +131,7 @@
         <div style="position: relative;" style="text-align: center;">
             <img src="download.jpg" alt="" width="100%" height="500px">
             <div class="homeImgText">
-                <span class="fas fa-calendar"></span>
+                <span class="fab fa-pagelines fa-2x"></span>
                 <h1 style="font-size: 40px;"><b>SIMPLE CSS TEMPLATE</b></h1>
                 <h1><i>WELCOME TO OUR CHURCH</i></h1>
                 <div class="but1">JOIN WITH US</div>
@@ -140,6 +143,7 @@
         <h2 style="padding-top: 30px;"><b>STATEMENT OF FAITH</b></h2>
         <div class="clearfix pad">
             <div class="column">
+                <span class="fab fa-pagelines fa-2x"></span>
                 <h4><b>What We Believe</b></h4>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
@@ -149,6 +153,7 @@
                     book.</p>
             </div>
             <div class="column">
+                <span class="fas fa-users fa-2x"></span>
                 <h4><b>What We Are</b></h4>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
@@ -158,6 +163,7 @@
                     book.</p>
             </div>
             <div class="column">
+                <span class="fas fa-heart fa-2x"></span>
                 <h4><b>How We Live</b></h4>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
@@ -172,13 +178,13 @@
     <section>
         <div class="container pad" style="color: white; background-color: crimson;">
             <div class="box1" style="flex: 45%; line-height: 20px;">
-                <p><i>Monday, 10:00 Am - Friday, 10:00 Am</i></p>
+                <p><span class="fas fa-calendar"></span><i>Monday, 10:00 Am - Friday, 10:00 Am</i></p>
                 <h2>Welcome to our Church</h2>
             </div>
             <div class="box1" style="float: 35%;">
                 <div class="vl">
-                    <p><i>St. Pearl Church</i></p>
-                    <p><i>510 102th Ave. NE, Bellevue, WA 68005</i></p>
+                    <p><span class="fas fa-map-marker"></span><i>St. Pearl Church</i></p>
+                    <p><span class="fas fa-location-arrow"></span><i>510 102th Ave. NE, Bellevue, WA 68005</i></p>
                 </div>
             </div>
             <div class="box1" style="flex: 20%; margin: auto;">
@@ -191,9 +197,9 @@
         <div class="container pad" style="padding-top: 80px; padding-bottom: 80px; background-color: lightgray;">
             <div class="box2" id="box2" style="background-color: white; padding: 30px 50px;">
                 <h2>Welcome to our Church</h2>
-                <p><span class="fas fa-calendar"></span> Monday, 10:00 Am - Friday, 10:00 Am</p>
-                <p style="color: red">St. Pearl Church</p>
-                <p>510 102th Ave. NE, Bellevue, WA 68005</p>
+                <p><span class="fas fa-calendar"></span>Monday, 10:00 Am - Friday, 10:00 Am</p>
+                <p style="color: red"><span class="fas fa-map-marker"></span>St. Pearl Church</p>
+                <p><span class="fas fa-location-arrow"></span>510 102th Ave. NE, Bellevue, WA 68005</p>
             </div>
             <div class="box2" style="flex: 10%; color: white; background-color: crimson;">
                 <div class="container">
@@ -224,6 +230,11 @@
             <div class="column">
                 <img class="img" src="OIP (1).jpg" alt="">
                 <h3><b>Morning Gathering</b></h3>
+                <div style="font-style: italic;">
+                    <p><span class="fas fa-calendar"></span>Monday, 10:00 Am - Friday, 10:00 Am</p>
+                    <p style="color: red"><span class="fas fa-map-marker"></span>St. Pearl Church</p>
+                    <p><span class="fas fa-location-arrow"></span>510 102th Ave. NE, Bellevue, WA 68005</p>
+                </div>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
                     ever
@@ -234,6 +245,11 @@
             <div class="column">
                 <img class="img" src="OIP (2).jpg" alt="">
                 <h3><b>Spirit And Truth</b></h3>
+                <div style="font-style: italic;">
+                    <p><span class="fas fa-calendar"></span>Monday, 10:00 Am - Friday, 10:00 Am</p>
+                    <p style="color: red"><span class="fas fa-map-marker"></span>St. Pearl Church</p>
+                    <p><span class="fas fa-location-arrow"></span>510 102th Ave. NE, Bellevue, WA 68005</p>
+                </div>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
                     ever
@@ -244,6 +260,11 @@
             <div class="column">
                 <img class="img" src="OIP.jpg" alt="">
                 <h3><b>Sunday School</b></h3>
+                <div style="font-style: italic;">
+                    <p><span class="fas fa-calendar"></span>Monday, 10:00 Am - Friday, 10:00 Am</p>
+                    <p style="color: red"><span class="fas fa-map-marker"></span>St. Pearl Church</p>
+                    <p><span class="fas fa-location-arrow"></span>510 102th Ave. NE, Bellevue, WA 68005</p>
+                </div>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
                     ever
