--- a/4/index.html
+++ b/4/index.html
@@ -120,7 +120,8 @@
             height: 2in;
             width: 100%;
         }
-        span{
+
+        span {
             padding-right: 5px;
         }
     </style>
@@ -201,23 +202,31 @@
                 <p style="color: red"><span class="fas fa-map-marker"></span>St. Pearl Church</p>
                 <p><span class="fas fa-location-arrow"></span>510 102th Ave. NE, Bellevue, WA 68005</p>
             </div>
-            <div class="box2" style="flex: 10%; color: white; background-color: crimson;">
+            <div class="box2" style="flex: 20%; color: white; background-color: crimson;">
                 <div class="container">
-                    <div class="vl box1" style="flex: 25%; border-left: 0px;">
-                        <h2 style="font-size:xx-large;">200</h2>
-                        <p>Days</p>
+                    <div class="box1" style="flex: 25%; padding: 10px;">
+                        <div class="vl" style="border-left: 0px;">
+                            <h2 style="font-size:xx-large;">200</h2>
+                            <p>Days</p>
+                        </div>
                     </div>
-                    <div class="vl box1" style="flex: 25%;">
-                        <h2 style="font-size:xx-large;">16</h2>
-                        <p>Hours</p>
+                    <div class="box1" style="flex: 25%; padding: 10px;">
+                        <div class="vl">
+                            <h2 style="font-size:xx-large;">16</h2>
+                            <p>Hours</p>
+                        </div>
                     </div>
-                    <div class="vl box1" style="flex: 25%;">
-                        <h2 style="font-size:xx-large;">42</h2>
-                        <p>Minutes</p>
+                    <div class="box1" style="flex: 25%; padding: 10px;">
+                        <div class="vl">
+                            <h2 style="font-size:xx-large;">42</h2>
+                            <p>Minutes</p>
+                        </div>
                     </div>
-                    <div class="vl box1" style="flex: 25%;">
-                        <h2 style="font-size:xx-large;">40</h2>
-                        <p>Seconds</p>
+                    <div class="box1" style="flex: 25%; padding: 10px;">
+                        <div class="vl">
+                            <h2 style="font-size:xx-large;">40</h2>
+                            <p>Seconds</p>
+                        </div>
                     </div>
                 </div>
             </div>
